# n-cmdb

./: .gitignore  README.md  discovery_spec.md  docker-compose.yml  loc.json  package-lock.json  package.json  srv.json
.github/workflows/: validate.yml
cmdb-api/: Dockerfile  index.js  package-lock.json  package.json
cmdb-repo/schemas/: citype.schema.json  monitoringmapping.schema.json  monitoringsource.schema.json  relationtype.schema.json  template.schema.json  tenant.schema.json
cmdb-repo/tenants/acme/: tenant.yaml
cmdb-repo/tenants/acme/citypes/: location.yaml  server.yaml
cmdb-repo/tenants/acme/relationtypes/: located_in.yaml
cmdb-ui/: index.html  package-lock.json  package.json  vite.config.ts
cmdb-ui/src/: App.tsx
cmdb-ui/src/components/: CICreateWizard.tsx  CIDashboard.tsx  CIDetails.tsx
designer/: package-lock.json  package.json
designer-api/: Dockerfile  package-lock.json  package.json  server.js
designer-api/tests/: functional.test.js
designer/src/: App.tsx
designer/src/components/: CITypeEditor.tsx  PRSuccess.tsx  PreviewPanel.tsx  PropertyDrawer.tsx  TemplateEditor.tsx
discovery/agent/: Cargo.toml
discovery/agent/src/: main.rs
discovery/agent/src/sources/: monitoring.rs  prober.rs
discovery/api/: Cargo.toml
discovery/api/src/: main.rs
discovery/ui/src/: DiscoveryInbox.tsx
docs/: handbook.md  rustchat_integration.md
reconciler/: Dockerfile  package-lock.json  package.json  schema.sql
reconciler/src/: cli.js  reconciler.js  setup.js
scripts/: validate.js
scripts/db/: discovery_schema.sql
(+1 files in other folders)
